# zero-shot-labeler

./: .dockerignore  .gitignore  Dockerfile  Makefile  emails.csv  modal_labeler.py  pyproject.toml
notebooks/: classifier_few_shot_lite.ipynb  classifier_zero_shot_lite.ipynb
playground/: labeler.py  lambda_handler.py  ner.py  test_lambda.py
playground/methods/: aho_corasick.py
tests/: test_lambda.py  test_ner.py
zero_shot_labeler/: __init__.py  classifier_zero_shot_classy.ipynb  classifier_zero_shot_lite.ipynb  labeler.py
