[tool.poetry]
description = "A lightweight zero-shot labeler for text classification"
authors = ["Juan Gaitán-Villamizar <juans.gaitan@gmail.com>"]
repository = "https://github.com/0xjgv/zero-shot-labeler"
homepage = "https://github.com/0xjgv/zero-shot-labeler"
name = "zero_shot_labeler"
readme = "README.md"
version = "0.1.3"
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.11"
transformers = {extras = ["torch"], version = "^4.46.3"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
ipykernel = "^6.29.5"
modal = "^0.67.23"
scikit-learn = "^1.6.0"
sentence-transformers = "^3.3.1"
einops = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]
